package es.progcipfpbatoi;

/**
 * Clase principal.
 * 
 */

import es.progcipfpbatoi.menu.Menu;

public class BatBatCar {

    public static void main(String[] args) {
        Menu menu = new Menu();
        menu.iniciar();
    }
}
